# wheelbarrow

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  wheelbarrow.service
.cursor/rules/: engine-tick-persist.mdc
client/: index.html
client/css/: style.css
client/js/: game.js  input.js  renderer.js  terrain.js  ws.js
db/: init.sql  migration_0_11_continuous_movement.sql
deploy/: README.md  wheelbarrow.hromp.com.nginx.conf  wheelbarrow.nginx.location.conf
docs/: ENGINE-TICK-AND-PERSIST.md
scripts/: add_major_rivers.py  densify_resource_nodes.py  diagnose_tile_overlaps.py  regenerate_poor_soil.py  seed_spawn_ring_water.py
server/: config.py  main.py
server/db/: connection.py  queries.py
server/game/: constants.py  construction.py  engine.py  ids.py  intertown_roads.py  movement.py  roads_util.py  seasons.py  terrain_elevation.py  terrain_features.py  tick.py  town_npcs.py  wb_condition.py  world_gen.py
tests/: test_ids_equal.py  test_movement_blocked.py  test_roads_util.py  test_terrain_elevation.py  test_terrain_rivers.py
wheelbarrow/: wheelbarrow.py
